force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/cdcpc__RD_Pricing_Disc_Component_Pricing__c.object-meta.xml
<CustomObject>
    <label>RDPricingDiscComponentPricing</label>
    <nameField>
        <label>RDPricingDiscComponentPricing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPricingDiscComponentPricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>