force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/fields/cdcpc__BP72LL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__BP72LL__c</fullName>
    <label>BP72LL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>