force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/fields/cdcpc__BP72UL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__BP72UL__c</fullName>
    <label>BP72UL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>