force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/fields/cdcpc__Comp_Seat__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Comp_Seat__c</fullName>
    <label>Comp Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>