force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/fields/cdcpc__Mfg_Rng__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Mfg_Rng__c</fullName>
    <label>Mfg Rng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>