force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/fields/cdcpc__Part__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Part__c</fullName>
    <label>Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>