force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/fields/cdcpc__Part_Matl__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Part_Matl__c</fullName>
    <label>Part Matl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>