force-app/main/default/objects/cdcpc__RD_Pricing_Disc_Component_Pricing__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <booleanFilter>1 AND 2 AND 4 AND 5 AND 7 AND (3 OR 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>cdcpc__List_Price__c</columns>
    <columns>cdcpc__Part__c</columns>
    <columns>cdcpc__Part_Matl__c</columns>
    <columns>cdcpc__Prod__c</columns>
    <columns>cdcpc__BP72LL__c</columns>
    <columns>cdcpc__BP72UL__c</columns>
    <columns>cdcpc__Mfg_Rng__c</columns>
    <columns>cdcpc__QtyUL__c</columns>
    <columns>cdcpc__QtyLL__c</columns>
    <columns>cdcpc__Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__Part__c</field>
        <operation>contains</operation>
        <value>disc</value>
    </filters>
    <filters>
        <field>cdcpc__Prod__c</field>
        <operation>equals</operation>
        <value>STD</value>
    </filters>
    <filters>
        <field>cdcpc__BP72UL__c</field>
        <operation>equals</operation>
        <value>1440</value>
    </filters>
    <filters>
        <field>cdcpc__Part_Matl__c</field>
        <operation>contains</operation>
        <value>005</value>
    </filters>
    <filters>
        <field>cdcpc__QtyUL__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>cdcpc__BP72LL__c</field>
        <operation>equals</operation>
        <value>1440</value>
    </filters>
    <filters>
        <field>cdcpc__Size__c</field>
        <operation>equals</operation>
        <value>0100</value>
    </filters>
    <label>All</label>
</ListView>